src/sigmaott-cms/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cms
spec:
  type: ClusterIP
  ports:
  - name: rest
    port: 80
    protocol: TCP
